# xxos_log

./: Cargo.toml  README.md
proc_macro_lib/: Cargo.toml
proc_macro_lib/src/: lib.rs
src/: lib.rs  log.rs
write_log/: Cargo.toml
write_log/src/: lib.rs
